<resources>
    <string name="app_name">Cook book</string>
    <string name="button_add_description">buttonAdd</string>
    <string name="icon_background_description">icon_background</string>
    <string name="text_background">There is nothing here! Let is fix it</string>
    <string name="text_hint">textHint</string>
    <string name="button_clear_filter">ClearFilter</string>
    <string name="title_hint">Enter recipe name</string>
    <string name="author_name_hint">Enter name author recipe</string>
    <string name="text_recipe_hint">Enter recipe description</string>
    <string name="european_type">European</string>
    <string name="asian_type">Asian</string>
    <string name="panasian_type" >Panasian</string>
    <string name="eastern_type">Eastern</string>
    <string name="american_type">American</string>
    <string name="russian_type">Russian</string>
    <string name="mediterranean_type">Mediterranean</string>
    <string name="button_save_description">buttonSave_description</string>
    <string name="button_apply_text">Apply filter</string>
    <string name="menu_options_description">menu_options_description</string>
    <string name="button_favorite_description">button_favorite_description</string>
    <string name="category_recipe_hint">Kitchen affiliation</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="all_recipes">AllRecipes</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="add_ingredient_title">Add ingredient</string>
    <string name="add_step_title">Add Step</string>
    <string name="please_select_at_least_one_option">Please select at least one option</string>

</resources>