<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nerecipe.ui.RecipeCreateFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/black_50"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:backgroundTint="@color/black_50"
        android:hint="@string/title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />


    <EditText
        android:id="@+id/authorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/black_50"
        android:hint="@string/author_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/textRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/black_50"
        android:hint="@string/text_recipe_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorName" />


    <RadioGroup
        android:id="@+id/categoryRecipeCheckBoxOne"
        android:layout_width="198dp"
        android:layout_height="218dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_recipe"
        app:layout_constraintVertical_bias="0.23">

        <RadioButton
            android:id="@+id/checkBoxEuropean"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/european_type" />

        <RadioButton
            android:id="@+id/checkBoxAsian"
            android:layout_width="128dp"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/asian_type" />

        <RadioButton
            android:id="@+id/checkBoxPanasian"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/panasian_type" />

        <RadioButton
            android:id="@+id/checkBoxEastern"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/eastern_type" />

        <RadioButton
            android:id="@+id/checkBoxAmerican"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/american_type" />

        <RadioButton
            android:id="@+id/checkBoxRussian"
            android:layout_width="186dp"
            android:layout_height="30dp"
            android:layout_marginEnd="80dp"
            android:buttonTint="@color/black_50"
            android:text="@string/russian_type" />

        <RadioButton
            android:id="@+id/checkBoxMediterranean"
            android:layout_width="182dp"
            android:layout_height="30dp"
            android:buttonTint="@color/black_50"
            android:text="@string/mediterranean_type" />


    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/button_save_description"
        app:backgroundTint="@color/black_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_check" />

    <TextView
        android:id="@+id/category_recipe"
        android:layout_width="230dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/category_recipe_hint"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRecipe" />

</androidx.constraintlayout.widget.ConstraintLayout>