<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.netology.nerecipe.ui.RecipeFilterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topMenu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/black_50"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <CheckBox
        android:id="@+id/checkBoxEuropean"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:clickable="true"
        android:text="@string/european_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <CheckBox
        android:id="@+id/checkBoxAsian"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/asian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxEuropean"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEuropean" />

    <CheckBox
        android:id="@+id/checkBoxPanasian"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/panasian_type"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAsian"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAsian" />

    <CheckBox
        android:id="@+id/checkBoxEastern"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/eastern_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMediterranean" />

    <CheckBox
        android:id="@+id/checkBoxAmerican"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/american_type"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRussian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEuropean"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.761" />

    <CheckBox
        android:id="@+id/checkBoxRussian"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/russian_type"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxMediterranean"
        app:layout_constraintStart_toEndOf="@+id/checkBoxAsian"
        app:layout_constraintTop_toTopOf="@+id/checkBoxAsian"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxMediterranean"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:buttonTint="@color/black_50"
        android:checked="true"
        android:text="@string/mediterranean_type"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPanasian"
        app:layout_constraintTop_toTopOf="@+id/checkBoxPanasian" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black_50"
        android:clickable="true"
        android:text="@string/button_apply_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEastern" />

</androidx.constraintlayout.widget.ConstraintLayout>